--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -35,7 +35,14 @@
         android:id="@+id/profileFragment"
         android:name="com.monke.machnomusic3.ui.userFeature.profile.ProfileFragment"
         android:label="fragment_profile"
-        tools:layout="@layout/fragment_profile" />
+        tools:layout="@layout/fragment_profile" >
+        <action
+            android:id="@+id/action_profileFragment_to_uploadPostFragment"
+            app:destination="@id/uploadPostFragment" />
+        <action
+            android:id="@+id/action_profileFragment_to_profilePictureFragment"
+            app:destination="@id/profilePictureFragment" />
+    </fragment>
     <fragment
         android:id="@+id/albumFragment"
         android:name="com.monke.machnomusic3.ui.musicFeature.album.AlbumFragment"
@@ -49,9 +56,6 @@
         <action
             android:id="@+id/action_uploadPostFragment_to_selectTracksFragment"
             app:destination="@id/selectTracksFragment" />
-        <action
-            android:id="@+id/action_uploadPostFragment_to_profileFragment"
-            app:destination="@id/profileFragment" />
     </fragment>
     <fragment
         android:id="@+id/searchMusicFragment"
