--- a/app/src/main/res/navigation/nav_app.xml
+++ b/app/src/main/res/navigation/nav_app.xml
@@ -97,10 +97,10 @@
         <action
             android:id="@+id/action_mainFragment_to_musicPlayerFragment"
             app:destination="@id/musicPlayerFragment"
-            app:enterAnim="@anim/push_left_in"
-            app:exitAnim="@anim/push_left_out"
-            app:popEnterAnim="@anim/push_right_in"
-            app:popExitAnim="@anim/push_right_out"/>
+            app:enterAnim="@anim/push_up_in"
+            app:exitAnim="@anim/push_up_out"
+            app:popEnterAnim="@anim/push_down_in"
+            app:popExitAnim="@anim/push_down_out" />
         <action
             android:id="@+id/action_mainFragment_to_uploadTrackFragment"
             app:destination="@id/uploadTrackFragment"
