--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -42,6 +42,13 @@
             app:exitAnim="@anim/push_left_out"
             app:popEnterAnim="@anim/push_right_in"
             app:popExitAnim="@anim/push_right_out"/>
+        <action
+            android:id="@+id/action_myMusicFragment_to_uploadPlaylistFragment"
+            app:destination="@id/uploadPlaylistFragment"
+            app:enterAnim="@anim/push_left_in"
+            app:exitAnim="@anim/push_left_out"
+            app:popEnterAnim="@anim/push_right_in"
+            app:popExitAnim="@anim/push_right_out"/>
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
@@ -101,4 +108,17 @@
         android:name="com.monke.machnomusic3.ui.userFeature.user.ProfilePictureFragment"
         android:label="fragment_profile_picture"
         tools:layout="@layout/fragment_profile_picture" />
+    <fragment
+        android:id="@+id/uploadPlaylistFragment"
+        android:name="com.monke.machnomusic3.ui.musicFeature.playlist.UploadPlaylistFragment"
+        android:label="fragment_upload_playlist"
+        tools:layout="@layout/fragment_upload_playlist" >
+        <action
+            android:id="@+id/action_uploadPlaylistFragment_to_selectTracksFragment"
+            app:destination="@id/selectTracksFragment"
+            app:enterAnim="@anim/push_left_in"
+            app:exitAnim="@anim/push_left_out"
+            app:popEnterAnim="@anim/push_right_in"
+            app:popExitAnim="@anim/push_right_out"/>
+    </fragment>
 </navigation>
