--- a/app/src/main/res/layout/fragment_upload_playlist.xml
+++ b/app/src/main/res/layout/fragment_upload_playlist.xml
@@ -66,6 +66,8 @@
         android:id="@+id/recycler_tracks"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_upload_track"
