--- a/app/src/main/res/layout/fragment_mini_player.xml
+++ b/app/src/main/res/layout/fragment_mini_player.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="Харакири" />
+        tools:text="Харакири" />
 
     <TextView
         android:id="@+id/txt_author"
@@ -24,7 +24,7 @@
         android:layout_marginStart="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_title"
-        android:text="Lumen" />
+        tools:text="Lumen" />
 
     <ImageView
         android:id="@+id/btn_action"
